# juce-vst-plugin

./: .gitignore  CMakeLists.txt  README.md
SimData/: make_lut.py  u101a_transfer_lut.csv
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
